Add toggle for keyboard flyouts

--- a/Pages/Behavior.xaml
+++ b/Pages/Behavior.xaml
@@ -18,11 +18,22 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <ui:TextBlock Text="Behavior" Grid.Row="0" Appearance="Primary" FontTypography="TitleLarge" Margin="0 0 0 10" Foreground="{DynamicResource colorNeutralForeground1}"/>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Cursor24}" Grid.Row="1" Margin="0 0 0 10" >
+        <ui:CardControl Icon="{ui:SymbolIcon Keyboard24}" Grid.Row="1" Margin="0 0 0 10">
+            <ui:CardControl.Header>
+                <StackPanel>
+                    <ui:TextBlock Text="Enable flyouts from keyboard copies" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
+                    <ui:TextBlock Text="Displays a flyout when Ctrl+C is pressed." Appearance="Secondary" TextWrapping="WrapWithOverflow"/>
+                </StackPanel>
+            </ui:CardControl.Header>
+            <ui:ToggleSwitch IsChecked="{Binding EnableKeyboardFlyouts}"/>
+        </ui:CardControl>
+
+        <ui:CardControl Icon="{ui:SymbolIcon Cursor24}" Grid.Row="2" Margin="0 0 0 10" >
             <ui:CardControl.Header>
                 <StackPanel>
                     <StackPanel Orientation="Horizontal">
@@ -35,7 +46,7 @@
             <ui:ToggleSwitch IsChecked="{Binding EnableNonKeyboardFlyouts}"/>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon ClipboardImage24}" Grid.Row="2" Margin="0 0 0 40">
+        <ui:CardControl Icon="{ui:SymbolIcon ClipboardImage24}" Grid.Row="3" Margin="0 0 0 40">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Show copied images" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -45,7 +56,7 @@
             <ui:ToggleSwitch IsChecked="{Binding AllowImages}"/>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon ClipboardClock24}" Grid.Row="3" Margin="0 0 0 40">
+        <ui:CardControl Icon="{ui:SymbolIcon ClipboardClock24}" Grid.Row="4" Margin="0 0 0 40">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout lifetime" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -58,7 +69,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="4" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundWaveCircle24}" Grid.Row="5" Margin="0 0 0 10">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Enable failure sounds" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -68,7 +79,7 @@
             <ui:ToggleSwitch IsChecked="{Binding EnableErrorSound}"/>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="5" Margin="0 0 0 40" IsEnabled="{Binding EnableErrorSound}">
+        <ui:CardControl Icon="{ui:SymbolIcon SoundSource24}" Grid.Row="6" Margin="0 0 0 40" IsEnabled="{Binding EnableErrorSound}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Failure sound" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -81,6 +92,6 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:Button Grid.Row="6" Content="Reset behavior settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click" Margin="0 0 0 10"/>
+        <ui:Button Grid.Row="7" Content="Reset behavior settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click" Margin="0 0 0 10"/>
     </Grid>
 </Page>
